Add detail to justification and sweep paras.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -33,6 +33,17 @@
     year = {2013},
 }
 
+@article{Vaserstein1969,
+    author = {Vaserstein, Leonid Nisonovich},
+    title = {Markov processes over denumerable products of spaces describing
+             large systems of automata},
+    journal = {Problemy Pereda{\v{c}}hi Informatsii},
+    volume = {5},
+    number = {3},
+    pages = {64-72},
+    year = {1969},
+}
+
 @article{Williams2015,
     author = {Williams, J. and Dumont, S. and Parry-Jones, J. and Komenda, I.
               and Griffiths, J. and Knight, V.},
