--- a/sections/wasserstein.tex
+++ b/sections/wasserstein.tex
@@ -77,7 +77,11 @@ stakeholders. Interpretability not just from explaining how something works but
 how its results may be explained also.
 
 As such, a reasonable candidate is the (first) Wasserstein metric, also known as
-the ``earth mover's'' or ``digger's'' distance.  This distance measures the
+the `earth mover' or `digger' distance~\cite{Vaserstein1969}. The Wasserstein
+metric satisfies the conditions of a formal mathematical metric (like the
+typical Euclidean distance), and its values take the units of the distributions
+under comparison (in this case: days). Both of these characteristics can aid
+understanding and explanation. In simple terms, the distance measures the
 approximate `minimal work' required to move between two probability
 distributions where `work' can be loosely defined as the product of how much of
 the distribution's mass must be to be moved with the distance it must be moved
@@ -89,8 +93,18 @@ distributions \(U\) and \(V\) is defined as:
 
 \noindent where \(F\) and \(G\) are the cumulative density functions of \(U\)
 and \(V\) respectively. A proof of~\eqref{eq:wasserstein} is presented
-in~\cite{Ramdas2017}. The parameter set with the smallest maximum distance over
-a number of runs is then taken to be the most appropriate.
+in~\cite{Ramdas2017}. The parameter set with the smallest maximum distance
+between any cluster's simulated system time distribution and the overall
+observed length of stay distribution is then taken to be the most appropriate.
+
+Specifically, the parameter sweep included values of each \(p_i\) from \(0.5\)
+to \(1\) with a granularity of \(10^{-1}\) and values of \(c\) from \(40\) to
+\(60\) at steps of \(5\). These choices were informed by the assumptions of the
+model and formative analysis to reduce the parameter space given the
+computational resources required to conduct the simulations. Each parameter set
+was repeated \(50\) times with each simulation running for four years of virtual
+time. The warm-up and cool-down periods were taken to be approximately one year
+each leaving two years of simulated data from each repetition.
 
 \begin{figure}
     \centering%
@@ -106,6 +120,13 @@ a number of runs is then taken to be the most appropriate.
              the worst parameter set.}\label{fig:worst_params}
 \end{figure}
 
+\begin{table}
+    \centering
+    \resizebox{\imgwidth}{!}{\input{tex/comparison}}
+    \caption{A comparison of summary statistics between the observed data, and
+        the best and worst simulated data.}\label{tab:comparison}
+\end{table}
+
 The results of this parameter sweep can be summarised in
 Figures~\ref{fig:best_params}~and~\ref{fig:worst_params}. Each figure shows a
 comparison of the observed lengths of stay across all groups and the newly
@@ -116,10 +137,3 @@ estimation under this model since the likelihood of short-stay patient arrivals
 has been inflated disproportionately against the tail of the distribution.
 Table~\ref{tab:comparison} reinforces these results numerically, showing a
 clear fit by the best parameters across the board.
-
-\begin{table}
-    \centering
-    \input{tex/comparison}
-    \caption{A comparison of summary statistics between the observed data, and
-        the best and worst simulated data.}\label{tab:comparison}
-\end{table}
