Drop wasserstein from pointers and names.

--- a/main.tex
+++ b/main.tex
@@ -39,7 +39,7 @@
 
 \input{sections/abstract}
 \input{sections/intro}
-\input{sections/wasserstein}
+\input{sections/model}
 \input{sections/scenarios}
 \input{sections/conclusion}
 
