--- a/nbs/wasserstein.ipynb
+++ b/nbs/wasserstein.ipynb
@@ -923,7 +923,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1a1a0b6610>"
+       "<matplotlib.legend.Legend at 0x1a27d40550>"
       ]
      },
      "execution_count": 15,
