--- a/sections/model.tex
+++ b/sections/model.tex
@@ -1,4 +1,4 @@
-\section{Constructing the queuing model}\label{sec:wasserstein}
+\section{Constructing the queuing model}\label{sec:model}
 
 % TODO What exactly is the problem and how can it be addressed?
 
