Minor image formatting and spell-checking.

--- a/main.tex
+++ b/main.tex
@@ -23,8 +23,8 @@
 
 
 % Custom lengths
-\newcommand{\imgwidth}{.85\textwidth}
-\newcommand{\tablewidth}{.9\textwidth}
+\newcommand{\imgwidth}{.9\textwidth}
+\newcommand{\tabwidth}{.9\textwidth}
 
 
 \title{%
