Make table headings more formal.

--- a/nbs/wasserstein.ipynb
+++ b/nbs/wasserstein.ipynb
@@ -908,6 +908,8 @@
     "describes.columns = [\"Observed\", \"Best simulated\", \"Worst simulated\"]\n",
     "\n",
     "to_latex = describes.copy()\n",
+    "index = [i. for i in to_latex.index]\n",
+    "\n",
     "to_latex.index = pd.MultiIndex.from_tuples(\n",
     "    [(\"Summary statistic\", i) for i in to_latex.index]\n",
     ")\n",
