--- a/tex/comparison.tex
+++ b/tex/comparison.tex
@@ -1,7 +1,7 @@
 \begin{tabular}{lrrrrrrr}
 \toprule
 {} & \multicolumn{7}{l}{Summary statistic} \\
-{} &              mean &    std &   min &   25\% &   50\% &   75\% &     max \\
+{} &              Mean &   Std. &  Min. &   25\% &   50\% &   75\% &    Max. \\
 \midrule
 Observed        &              7.70 &  11.86 & -0.02 &  1.49 &  4.20 &  8.93 &  224.93 \\
 Best simulated  &              7.11 &  12.41 &  0.00 &  1.44 &  3.55 &  7.64 &  244.46 \\
