Update comparison headings in notebook

--- a/nbs/wasserstein.ipynb
+++ b/nbs/wasserstein.ipynb
@@ -908,10 +908,10 @@
     "describes.columns = [\"Observed\", \"Best simulated\", \"Worst simulated\"]\n",
     "\n",
     "to_latex = describes.copy()\n",
-    "index = [i. for i in to_latex.index]\n",
+    "index = [\"Mean\", \"Std.\", \"Min.\", \"25%\", \"50%\", \"75%\", \"Max.\"]\n",
     "\n",
     "to_latex.index = pd.MultiIndex.from_tuples(\n",
-    "    [(\"Summary statistic\", i) for i in to_latex.index]\n",
+    "    [(\"Summary statistic\", i) for i in index]\n",
     ")\n",
     "\n",
     "to_latex.round(2).T.to_latex(\"../tex/comparison.tex\")\n",
@@ -927,7 +927,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1a21fe9510>"
+       "<matplotlib.legend.Legend at 0x1a1934f850>"
       ]
      },
      "execution_count": 15,
