Work in minor review

--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -3,23 +3,22 @@
 Population health research is becoming increasingly based on data-driven methods
 (as opposed to those designed solely by clinical experts) for patient-centred
 care through the advent of accessible software and a relative abundance of
-electronic data. Population health research concerns itself with better
-understanding the healthcare needs and behaviours of a population, so to further
-that end it can be helpful to find an appropriate segmentation of that
-population; such a segmentation allows for finer-grained analysis of groups in
-the population that share some form of homogeneity. One commonly used method for
-such patient-centred analysis is that of patient flow and their interaction with
-the healthcare system.
+electronic data. A vital part of such research is to better understand the
+healthcare needs and behaviours of a population, and it can be beneficial to
+find an appropriate segmentation of that population; such a segmentation allows
+for finer-grained analysis of groups in the population that share some form of
+homogeneity. One commonly used method for such patient-centred analysis is that
+of patient flow and their interaction with the healthcare system.
 
 However, this process relies heavily on detailed data --- about both the system
 and the population within that system --- which may limit research where
 sophisticated data pipelines are not yet in place. This work demonstrates how
 this issue may be overcome using administrative, spell-level hospital data to
-build a useful patient clustering that feeds into a multi-class queuing model.
+build a patient clustering that feeds into a multi-class queuing model.
 Specifically, this work examines patient records from the NHS Wales Cwm Taf
 Morgannwg University Health Board (UHB) that present chronic obstructive
-pulmonary disease (COPD). COPD is of particular interest to Cwm Taf Morgannwg as
-the condition is known to often present as a comorbidity in
+pulmonary disease (COPD). COPD is of particular interest to Cwm Taf Morgannwg
+UHB as the condition is known to often present as a comorbidity in
 patients~\cite{Houben2019} and it was found that they had the highest prevalence
 of the condition across all the Welsh health boards in an internal report by NHS
 Wales.
