Add simulation details to comparison table.

--- a/nbs/wasserstein.ipynb
+++ b/nbs/wasserstein.ipynb
@@ -336,9 +336,9 @@
    ],
    "source": [
     "with open(\"../data/small_wasserstein/best/params.txt\", \"r\") as f:\n",
-    "    *ps, c, distance = map(float, f.read().split(\" \"))\n",
+    "    *best_ps, best_c, best_distance = map(float, f.read().split(\" \"))\n",
     "\n",
-    "ps, c, distance"
+    "best_ps, best_c, best_distance"
    ]
   },
   {
@@ -578,9 +578,9 @@
    ],
    "source": [
     "with open(\"../data/small_wasserstein/worst/params.txt\", \"r\") as f:\n",
-    "    *ps, c, distance = map(float, f.read().split(\" \"))\n",
+    "    *worst_ps, worst_c, worst_distance = map(float, f.read().split(\" \"))\n",
     "\n",
-    "ps, c, distance"
+    "worst_ps, worst_c, worst_distance"
    ]
   },
   {
@@ -818,75 +818,105 @@
        "        vertical-align: top;\n",
        "    }\n",
        "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
+       "    <tr>\n",
        "      <th></th>\n",
-       "      <th>Observed</th>\n",
-       "      <th>Best simulated</th>\n",
-       "      <th>Worst simulated</th>\n",
+       "      <th colspan=\"6\" halign=\"left\">Model parameter and result</th>\n",
+       "      <th colspan=\"7\" halign=\"left\">LOS statistic</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>\\(p_0\\)</th>\n",
+       "      <th>\\(p_1\\)</th>\n",
+       "      <th>\\(p_2\\)</th>\n",
+       "      <th>\\(p_3\\)</th>\n",
+       "      <th>\\(c\\)</th>\n",
+       "      <th>Max. distance</th>\n",
+       "      <th>Mean</th>\n",
+       "      <th>Std.</th>\n",
+       "      <th>Min.</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>Med.</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>Max.</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>7.702120</td>\n",
-       "      <td>7.109257</td>\n",
-       "      <td>4.363323</td>\n",
+       "      <th>Observed</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>7.70</td>\n",
+       "      <td>11.86</td>\n",
+       "      <td>-0.02</td>\n",
+       "      <td>1.49</td>\n",
+       "      <td>4.20</td>\n",
+       "      <td>8.93</td>\n",
+       "      <td>224.93</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>11.861053</td>\n",
-       "      <td>12.413875</td>\n",
-       "      <td>13.400991</td>\n",
+       "      <th>Best simulated</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>1.30</td>\n",
+       "      <td>7.11</td>\n",
+       "      <td>12.41</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.44</td>\n",
+       "      <td>3.55</td>\n",
+       "      <td>7.64</td>\n",
+       "      <td>244.46</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>-0.020833</td>\n",
-       "      <td>0.000013</td>\n",
-       "      <td>0.000007</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>1.491667</td>\n",
-       "      <td>1.436432</td>\n",
-       "      <td>0.719587</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>4.195139</td>\n",
-       "      <td>3.552902</td>\n",
-       "      <td>1.782643</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>8.930556</td>\n",
-       "      <td>7.635822</td>\n",
-       "      <td>3.844208</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>224.927778</td>\n",
-       "      <td>244.455398</td>\n",
-       "      <td>463.005915</td>\n",
+       "      <th>Worst simulated</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>4.25</td>\n",
+       "      <td>4.36</td>\n",
+       "      <td>13.40</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.72</td>\n",
+       "      <td>1.78</td>\n",
+       "      <td>3.84</td>\n",
+       "      <td>463.01</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        Observed  Best simulated  Worst simulated\n",
-       "mean    7.702120        7.109257         4.363323\n",
-       "std    11.861053       12.413875        13.400991\n",
-       "min    -0.020833        0.000013         0.000007\n",
-       "25%     1.491667        1.436432         0.719587\n",
-       "50%     4.195139        3.552902         1.782643\n",
-       "75%     8.930556        7.635822         3.844208\n",
-       "max   224.927778      244.455398       463.005915"
+       "                Model parameter and result                                \\\n",
+       "                                   \\(p_0\\) \\(p_1\\) \\(p_2\\) \\(p_3\\) \\(c\\)   \n",
+       "Observed                               NaN     NaN     NaN     NaN   NaN   \n",
+       "Best simulated                         1.0     1.0     1.0     0.5  50.0   \n",
+       "Worst simulated                        0.5     0.5     0.5     1.0  40.0   \n",
+       "\n",
+       "                              LOS statistic                                 \\\n",
+       "                Max. distance          Mean   Std.  Min.   25%  Med.   75%   \n",
+       "Observed                 0.00          7.70  11.86 -0.02  1.49  4.20  8.93   \n",
+       "Best simulated           1.30          7.11  12.41  0.00  1.44  3.55  7.64   \n",
+       "Worst simulated          4.25          4.36  13.40  0.00  0.72  1.78  3.84   \n",
+       "\n",
+       "                         \n",
+       "                   Max.  \n",
+       "Observed         224.93  \n",
+       "Best simulated   244.46  \n",
+       "Worst simulated  463.01  "
       ]
      },
      "execution_count": 14,
@@ -903,20 +933,34 @@
     "        ]\n",
     "    ],\n",
     "    axis=1,\n",
-    ")\n",
+    ").round(2)\n",
     "\n",
     "describes.columns = [\"Observed\", \"Best simulated\", \"Worst simulated\"]\n",
+    "describes.index = [\"Mean\", \"Std.\", \"Min.\", \"25%\", \"Med.\", \"75%\", \"Max.\"]\n",
     "\n",
-    "to_latex = describes.copy()\n",
-    "index = [\"Mean\", \"Std.\", \"Min.\", \"25%\", \"50%\", \"75%\", \"Max.\"]\n",
-    "\n",
-    "to_latex.index = pd.MultiIndex.from_tuples(\n",
-    "    [(\"Summary statistic\", i) for i in index]\n",
+    "params = pd.DataFrame(\n",
+    "    {\n",
+    "        \"Observed\": [np.nan] * (len(best_ps) + 1) + [0],\n",
+    "        \"Best simulated\": [*best_ps, best_c, round(best_distance, 2)],\n",
+    "        \"Worst simulated\": [*worst_ps, worst_c, round(worst_distance, 2)],\n",
+    "    },\n",
+    "    index=[\"\\(p_0\\)\", \"\\(p_1\\)\", \"\\(p_2\\)\", \"\\(p_3\\)\", r\"\\(c\\)\", \"Max. distance\"],\n",
     ")\n",
     "\n",
-    "to_latex.round(2).T.to_latex(\"../tex/comparison.tex\")\n",
+    "to_latex = pd.concat((params, describes))\n",
     "\n",
-    "describes"
+    "to_latex.index = pd.MultiIndex.from_tuples(\n",
+    "    [\n",
+    "        *[(\"Model parameter and result\", i) for i in params.index],\n",
+    "        *[(\"LOS statistic\", i) for i in describes.index]\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "string = to_latex.T.to_latex().replace(\"\\\\textbackslash \", \"\\\\\").replace(\"\\\\_\", \"_\")\n",
+    "with open(\"../tex/comparison.tex\", \"w\") as f:\n",
+    "    f.write(string)\n",
+    "\n",
+    "to_latex.T"
    ]
   },
   {
@@ -927,7 +971,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1a1934f850>"
+       "<matplotlib.legend.Legend at 0x1a22b4d6d0>"
       ]
      },
      "execution_count": 15,
