--- a/sections/model.tex
+++ b/sections/model.tex
@@ -133,7 +133,8 @@ clear fit by the best parameters across the board.
 
 \begin{table}
     \centering
-    \input{tex/comparison}
-    \caption{A comparison of summary statistics between the observed data, and
-        the best and worst simulated data.}\label{tab:comparison}
+    \resizebox{\textwidth}{!}{\input{tex/comparison}}
+    \caption{A comparison of the observed data, and the best and worst simulated
+        data based on the model parameters and summary statistics for length of
+    stay (LOS).}\label{tab:comparison}
 \end{table}
