--- a/tex/comparison.tex
+++ b/tex/comparison.tex
@@ -1,10 +1,10 @@
-\begin{tabular}{lrrrrrrr}
+\begin{tabular}{lrrrrrrrrrrrrr}
 \toprule
-{} & \multicolumn{7}{l}{Summary statistic} \\
-{} &              Mean &   Std. &  Min. &   25\% &   50\% &   75\% &    Max. \\
+{} & \multicolumn{6}{l}{Model parameter and result} & \multicolumn{7}{l}{LOS statistic} \\
+{} &                    \(p_0\) & \(p_1\) & \(p_2\) & \(p_3\) & \(c\) & Max. distance &          Mean &   Std. &  Min. &   25\% &  Med. &   75\% &    Max. \\
 \midrule
-Observed        &              7.70 &  11.86 & -0.02 &  1.49 &  4.20 &  8.93 &  224.93 \\
-Best simulated  &              7.11 &  12.41 &  0.00 &  1.44 &  3.55 &  7.64 &  244.46 \\
-Worst simulated &              4.36 &  13.40 &  0.00 &  0.72 &  1.78 &  3.84 &  463.01 \\
+Observed        &                        NaN &     NaN &     NaN &     NaN &   NaN &          0.00 &          7.70 &  11.86 & -0.02 &  1.49 &  4.20 &  8.93 &  224.93 \\
+Best simulated  &                        1.0 &     1.0 &     1.0 &     0.5 &  50.0 &          1.30 &          7.11 &  12.41 &  0.00 &  1.44 &  3.55 &  7.64 &  244.46 \\
+Worst simulated &                        0.5 &     0.5 &     0.5 &     1.0 &  40.0 &          4.25 &          4.36 &  13.40 &  0.00 &  0.72 &  1.78 &  3.84 &  463.01 \\
 \bottomrule
 \end{tabular}
