Write missing data lit review.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -9,6 +9,14 @@
     author = {Ines Verena Arnolds and Daniel Gartner},
 }
 
+@misc{Asanjarani2017,
+    author = {Asanjarani, Azam and Nazarathy, Yoni and Pollett, Philip},
+    year = {2017},
+    title = {Parameter and State Estimation in Queues and Related Stochastic
+             Models: A Bibliography},
+    url = {https://people.smp.uq.edu.au/PhilipPollett/papers/Qest/QEstAnnBib.pdf}
+}
+
 @article{Curley2017,
     title = {Dealing with Missing Data: A Comparative Exploration of Approaches
              Using the Integrated City Sustainability Database},
@@ -121,18 +129,6 @@
               Vanfleteren},
 }
 
-@incollection{Kumar2010,
-    author = {Kumar, Dinesh and Tantawi, Asser and Zhang, Li},
-    year = {2010},
-    chapter = {3},
-    pages = {45-71},
-    title = {Estimating Model Parameters of Adaptive Software Systems in
-             Real-Time},
-    editor = {Ardagna, Danilo and Zhang, Li},
-    booktitle = {Run-time Models for Self-managing Systems and Applications},
-    doi = {10.1007/978-3-0346-0433-8_3}
-}
-
 @article{Kuwornu2014,
     title = {Multimorbidity Disease Clusters in {Aboriginal} and
              {non-Aboriginal} {Caucasian} Populations in {Canada}},
@@ -163,6 +159,18 @@
     author = {Lazarsfeld, Paul Felix and Henry, Neil W},
     year = {1968},
     publisher = {Houghton Mifflin Co.},
+}
+
+@article{Mohammadi2012,
+    author = {A. Mohammadi and M. R. Salehi-Rad},
+    title = {Bayesian Inference and Prediction in an {$M/G/1$} with Optional
+             Second Service},
+    journal = {Communications in Statistics - Simulation and Computation},
+    volume = {41},
+    number = {3},
+    pages = {419-435},
+    year  = {2012},
+    doi = {10.1080/03610918.2011.588358},
 }
 
 @article{Newman2014,
@@ -278,6 +286,18 @@
               Tan and Joanne Hui Min Quah and Julian Thumboo and Lian Leng Low},
 }
 
+@article{Yom2014,
+    title = {{Erlang-R}: A time-varying queue with reentrant customers, in
+             support of healthcare staffing},
+    author = {Yom-Tov, Galit B and Mandelbaum, Avishai},
+    journal = {Manufacturing \& Service Operations Management},
+    volume = {16},
+    number = {2},
+    pages = {283--299},
+    year = {2014},
+    doi = {10.1287/msom.2013.0474},
+}
+
 @article{Yoon2020,
     title = {Identifying Optimal Indicators and Purposes of Population
              Segmentation Through Engagement of Key Stakeholders: A Qualitative
@@ -291,5 +311,4 @@
     author = {Sungwon Yoon and Hendra Goh and Yu Heng Kwan and Julian Thumboo
               and Lian Leng Low},
 }
-
 
